--- a/.github/workflows/waka-readme.yaml
+++ b/.github/workflows/waka-readme.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Update README with WakaTime stats
         uses: athul/waka-readme@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WakaTime_API_KEY }}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           TIME_RANGE: all_time
           SHOW_TITLE: true
           LANG_COUNT: 10
