--- a/.github/workflows/waka-readme.yaml
+++ b/.github/workflows/waka-readme.yaml
@@ -18,5 +18,5 @@ jobs:
           SHOW_LANGUAGE: "true"
           SHOW_PROJECTS: "true" 
           SHOW_PROFILE_VIEWS: "true"
-          SHOW_TOTAL: "true"
-          BLOCKS: "░▒▓█"
+          SHOW_TOTAL_CODE_TIME: "true"
+          SYMBOL_VERSION: "1" 
