--- a/.github/workflows/waka-readme.yaml
+++ b/.github/workflows/waka-readme.yaml
@@ -20,3 +20,12 @@ jobs:
           SHOW_PROFILE_VIEWS: "true"
           SHOW_TOTAL_CODE_TIME: "true"
           SYMBOL_VERSION: "1" 
+
+          # sembunyikan
+          SHOW_SHORT_INFO: "false"
+          SHOW_LINES_OF_CODE: "false"
+          SHOW_COMMIT: "false"
+          SHOW_DAYS_OF_WEEK: "false"
+          SHOW_OS: "false"
+          SHOW_LANGUAGE_PER_REPO: "false"
+          SHOW_LOC_CHART: "false"
