--- a/.github/workflows/waka-readme.yaml
+++ b/.github/workflows/waka-readme.yaml
@@ -17,7 +17,7 @@ jobs:
           SHOW_EDITORS: "true"       
           SHOW_LANGUAGE: "true"
           SHOW_PROJECTS: "true" 
-          SHOW_PROFILE_VIEWS: "true"
+          SHOW_PROFILE_VIEWS: "false"
           SHOW_TOTAL_CODE_TIME: "true"
           SYMBOL_VERSION: "1" 
 
